--- a/fontend/client/src/index.css
+++ b/fontend/client/src/index.css
@@ -1,10 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "tailwindcss";
 
 /* Base styles */
 html, body, #root {
   height: 100%;
   margin: 0;
   padding: 0;
+  background: url('../public//assets/Creativeportfolio.jpg');
+  background-size: cover;
 }
